doc/static/code/FirstAgent_WinQt/dependencies/headers/ingescape/ingescape.h

#define PUBLIC __declspec(dllexport)
#define PUBLIC __declspec(dllimport)
#define PUBLIC
//////////////////////////////////////////////////
//initialization and control

//start & stop the agent
PUBLIC int igs_startWithDevice(const char *networkDevice, unsigned int port);
PUBLIC int igs_startWithIP(const char *ipAddress, unsigned int port);
PUBLIC int igs_stop(void);
//agent name set and get
PUBLIC int igs_setAgentName(const char *name);
PUBLIC char *igs_getAgentName(void); //char* must be freed by caller
//control agent state
PUBLIC int igs_setAgentState(const char *state);
PUBLIC char *igs_getAgentState(void); //char* must be freed by caller
//mute the agent ouputs
PUBLIC int igs_mute(void);
PUBLIC int igs_unmute(void);
PUBLIC bool igs_isMuted(void);
typedef void (*igs_muteCallback)(bool isMuted, void *myData);
PUBLIC int igs_observeMute(igs_muteCallback cb, void *myData);
//freeze and unfreeze the agent
//When freezed, agent will not send anything on its outputs and
//its inputs are not reactive to external data.
//NB: the internal semantics of freeze and unfreeze for a given agent
//are up to the developer and can be controlled using callbacks and igs_observeFreeze
PUBLIC int igs_freeze(void);
PUBLIC bool igs_isFrozen(void);
PUBLIC int igs_unfreeze(void);
typedef void (*igs_freezeCallback)(bool isPaused, void *myData);
PUBLIC int igs_observeFreeze(igs_freezeCallback cb, void *myData);
PUBLIC void igs_setCanBeFrozen(bool canBeFrozen);
PUBLIC bool igs_canBeFrozen(void);
//There are three non-exclusive ways to check & stop the execution of the ingescape
//instance and its hosting application:
//1- using igs_start* and igs_stop from the hosting app
//2- monitoring the status of igs_Interrupted in the hosting app
//3- setting igs_Interrupted from IngeScape callbacks and arranging to call igs_stop from parent thread when igs_Interrupted is set to true
//In any case, igs_stop MUST NEVER BE CALLED from any ingeScape callback, as it would cause a thread dead lock.

PUBLIC extern bool igs_Interrupted;
//register a callback when the agent is asked to stop on the network
//NB: NEVER CALL igs_stop from such a callback
typedef void (*igs_forcedStopCallback)(void *myData);
PUBLIC void igs_observeForcedStop(igs_forcedStopCallback cb, void *myData);
//terminate the agent and trigger the forcedStopCallbacks
PUBLIC void igs_die(void);
//////////////////////////////////////////////////
//IOP Model : Inputs, Outputs and Parameters read/write/check/observe/mute

typedef enum {
    IGS_INPUT_T = 1, ///< input of an agent.
    IGS_OUTPUT_T,    ///< output of an agent.
    IGS_PARAMETER_T  ///< parameter of an agent.
} iop_t;
typedef enum {
    IGS_INTEGER_T = 1,  ///< integer value type
    IGS_DOUBLE_T,       ///< double value type
    IGS_STRING_T,       ///< string value type
    IGS_BOOL_T,         ///< bool value type
    IGS_IMPULSION_T,    ///< impulsion value type
    IGS_DATA_T,         ///< data value type
    IGS_UNKNOWN_T       ///< for unknown parsed types
} iopType_t;
//read IOP using void*
PUBLIC int igs_readInput(const char *name, void **value, size_t *size);
PUBLIC int igs_readOutput(const char *name, void **value, size_t *size);
PUBLIC int igs_readParameter(const char *name, void **value, size_t *size);
//read per type
PUBLIC bool igs_readInputAsBool(const char *name);
PUBLIC int igs_readInputAsInt(const char *name);
PUBLIC double igs_readInputAsDouble(const char *name);
PUBLIC char* igs_readInputAsString(const char *name); //returned char* must be freed by caller
PUBLIC int igs_readInputAsData(const char *name, void **data, size_t *size); //returned data must be freed by caller
PUBLIC bool igs_readOutputAsBool(const char *name);
PUBLIC int igs_readOutputAsInt(const char *name);
PUBLIC double igs_readOutputAsDouble(const char *name);
PUBLIC char* igs_readOutputAsString(const char *name); //returned char* must be freed by caller
PUBLIC int igs_readOutputAsData(const char *name, void **data, size_t *size); //returned data must be freed by caller
PUBLIC bool igs_readParameterAsBool(const char *name);
PUBLIC int igs_readParameterAsInt(const char *name);
PUBLIC double igs_readParameterAsDouble(const char *name);
PUBLIC char* igs_readParameterAsString(const char *name); //returned char* must be freed by caller
PUBLIC int igs_readParameterAsData(const char *name, void **data, size_t *size); //returned data must be freed by caller
//observe writing to IOP
typedef void (*igs_observeCallback)(iop_t iopType, const char* name, iopType_t valueType, void* value, size_t valueSize, void* myData);